@@ -2,10 +2,11 @@
 Enable Websocket support for Minecraft Java.
 Since most CDN providers(at least for their free tier) do not support raw TCP proxy, with the help of this mod, the owner can now hide the server behind a CDN and let the players connect via WebSocket, thus preventing DDoS attacks.
 
-For Minecraft 1.20.1, Forge and Fabric.
+For Minecraft Forge, and Fabric:
+* 1.20.2, 1.20.3, 1.20.4
+* 1.20.1
 
-This branch is for 1.20.1 only,
-hopefully, it will work in future versions (although very unlikely).
+This branch is for 1.20.2, 1.20.3, and 1.20.4.
 
 This mod runs standalone and does not have any dependency.
 
