@@ -1,13 +1,13 @@
 # Common Properties
 	# The Minecraft version in the development environment
-	minecraft_version=1.20.1
+	minecraft_version=1.20.4
 	# The minimum minecraft version (inclusive) to run this Mod
-	minecraft_version_min=1.20.1
+	minecraft_version_min=1.20.2
 	# The maximum minecraft version (exclusive) to run this Mod
-	minecraft_version_max=1.20.2
+	minecraft_version_max=1.20.5
 
 # Mod Properties
-	mod_version = 0.6.0
+	mod_version = 0.6.1
 	dev_group = wsmc
 	archives_base_name = wsmc
 
@@ -15,7 +15,6 @@
 	# The minimum version of netty-codec-http that is known to work, inclusive
 	netty_version_min = 4.1.77.Final
 	# The netty version included in Minecraft, which sets the version of netty-codec-http included in the jar
-	netty_version = 4.1.82.Final
+	netty_version = 4.1.97.Final
 	# The maximum version of netty-codec-http that is known to cause problem, exclusive
-	netty_version_max = 4.1.83.Final
-
+	netty_version_max = 5.0
