@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.3-SNAPSHOT'
+	id 'fabric-loom' version '1.7-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -7,7 +7,8 @@ apply from: '../common.gradle'
 
 repositories {
     // Modmenu dev
-    maven { url 'https://maven.terraformersmc.com/releases/' }
+	maven { url 'https://maven.terraformersmc.com/releases/' }
+	maven { url = 'https://maven.nucleoid.xyz/' }
 }
 
 loom {
@@ -48,19 +49,13 @@ group = project.dev_group
 
 processResources {
 	inputs.property "version", project.version
-	def props = [
-		"version": project.version, 
-		"minecraft_version_min": project.minecraft_version_min,
-		"minecraft_version_max": project.minecraft_version_max,
-		"loader_version": project.loader_version
-	]
 
 	filesMatching("fabric.mod.json") {
-		expand props
+		expand project.mergedProperties
 	}
 }
 
-// configure  the source folders
+// configure the source folders
 sourceSets {
     main {
         java {
