@@ -5,9 +5,11 @@ org.gradle.daemon=false
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html	
 	loader_version=0.14.22
+	loader_version_min=0.14.22
+
 	# Fabric api
-	fabric_version=0.89.3+1.20.1
+	fabric_version=0.91.1+1.20.4
+	fabric_version_min=0.91.1+1.20.1
 
 # Dependencies
-	mod_menu_version=7.2.2
-
+	mod_menu_version=9.2.0
