@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.0.1
+forge_version=49.1.0
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[47,)
+forge_version_range=[48,50)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[47,)
+loader_version_range=[48,50)
 
 mixin_version = 0.8.5
