@@ -12,7 +12,7 @@ import org.spongepowered.asm.mixin.injection.callback.LocalCapture;
 
 import io.netty.handler.codec.http.HttpRequest;
 import net.minecraft.network.Connection;
-
+import net.minecraft.util.SampleLogger;
 import wsmc.IConnectionEx;
 import wsmc.IWebSocketServerAddress;
 
@@ -29,10 +29,10 @@ public class MixinConnection implements IConnectionEx {
 	 * Prior to the invocation of connectToServer(), call {@link wsmc.ArgHolder.connectToServerArg.push}
 	 * to get the ServerAddress-sensitive(IWebSocketServerAddress) version of connectToServer().
 	 */
-	@Inject(method = "connectToServer", locals = LocalCapture.CAPTURE_FAILHARD, at = @At(value = "INVOKE",
+	@Inject(method = "connectToServer", locals = LocalCapture.CAPTURE_FAILHARD, require = 1, at = @At(value = "INVOKE",
 			target = "Lnet/minecraft/network/Connection;connect(Ljava/net/InetSocketAddress;ZLnet/minecraft/network/Connection;)Lio/netty/channel/ChannelFuture;"))
 	private static void beforeCallConnect(InetSocketAddress socketAddress, boolean preferEPoll,
-			CallbackInfoReturnable<Connection> callback, Connection connection) {
+			SampleLogger logger, CallbackInfoReturnable<Connection> callback, Connection connection) {
 		IWebSocketServerAddress wsAddress = IConnectionEx.connectToServerArg.pop();
 		IConnectionEx con = (IConnectionEx) connection;
 		con.setWsInfo(wsAddress);
